[package]
name = "keyboard-color-chooser"
version = "0.1.0"
authors = ["Aaron Honeycutt <aaronhoneycutt@proton.me>"]
edition = "2021"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.libcosmic]
path = "../libcosmic"
default-features = false
features = ["debug", "winit", "tokio"]
